# gatery

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  buildDocumentation.sh  gatery_driver.vcxproj  hcl.sln  mhdl.sln  premake5.lua
doc/BitBangEngine/example/: BitBangEngineDriver.h  CMakeLists.txt  LIS2DH12.cpp  hdc1000.cpp  lm71.cpp
executables/samples/gameoflife/: CMakeLists.txt  SimpleDualPortRam.cpp  SimpleDualPortRam.h  gameoflife.cpp  gameoflife.h  gameoflife.vcxproj  pch.h  simulate.cpp  synthesize_vhdl.cpp
executables/samples/uart/: CMakeLists.txt  uart.vcxproj
executables/samples/uart/source/: simulate.cpp  synthesize_vhdl.cpp  uart.cpp  uart.h
frontend/: CMakeLists.txt
frontend/source/hcl/: frontend.h
frontend/source/hcl/frontend/: Bit.cpp  Bit.h  BitVector.cpp  BitVector.h  BitWidth.h  Bundle.cpp  Bundle.h  Clock.cpp  Clock.h  Comments.cpp  Comments.h  Compound.cpp  Compound.h  ConditionalScope.cpp  ConditionalScope.h  Constant.cpp  Constant.h  ConstructFrom.h  FSM.cpp  FSM.h  FrontendUnitTestSimulationFixture.cpp  FrontendUnitTestSimulationFixture.h  Integers.cpp  Integers.h  Memory.h  Pack.h  Pin.cpp  Pin.h  PriorityConditional.cpp  PriorityConditional.h  Reg.h  Registers.cpp  Registers.h  Scope.cpp  Scope.h  Signal.cpp  Signal.h  SignalArithmeticOp.cpp  SignalArithmeticOp.h  SignalBitshiftOp.cpp  (+17 more)
frontend/unitTests/: CMakeLists.txt
frontend/unitTests/source/: BVecTest.cpp  basics.cpp  compound.cpp  constructionTimeSimulation.cpp  fsm.cpp  main.cpp  memory.cpp  simulationProcess.cpp
libs/metaHDL_core/: CMakeLists.txt  core.vcxproj
libs/metaHDL_core/source/metaHDL_core/frontend/: Bit.cpp  Bit.h  BitVector.cpp  BitVector.h  Comments.h  Constant.h  Integers.cpp  Integers.h  PriorityConditional.h  Registers.cpp  Registers.h  Scope.cpp  Scope.h  Signal.cpp  Signal.h  SignalArithmeticOp.cpp  SignalArithmeticOp.h  SignalBitshiftOp.cpp  SignalBitshiftOp.h  SignalCompareOp.h  SignalDelay.h  SignalLogicOp.cpp  SignalLogicOp.h  SignalMiscOp.cpp  (+1 more)
libs/metaHDL_vis_qt/: CMakeLists.txt
libs/metaHDL_vis_qt/source/metaHDL_vis_Qt/: BaseGraphicsComposite.h  CHCLSyntaxHighlighter.cpp  CHCLSyntaxHighlighter.h  CircuitView.cpp  CircuitView.h  EdgeTree.cpp  EdgeTree.h  GraphLayouting.cpp  GraphLayouting.h  MainWindowSimulate.cpp  MainWindowSimulate.h  MainWindowSimulate.ui  Node.cpp  Node.h  Node_ElementaryOp.cpp  Node_ElementaryOp.h  Node_Entity.cpp  Node_Entity.h  Node_Signal.cpp  Node_Signal.h
libs/vpi_simulation_host/: CMakeLists.txt
libs/vpi_simulation_host/lib/: libghdlvpi.def
libs/vpi_simulation_host/source/: ClockGenerator.h  GhdlSimulation.cpp  GhdlSimulation.h  VpiModule.cpp  VpiModule.h  vpi_simulation_host.cpp  vpi_simulation_host.h
libs/vpi_simulation_host/tests/: ghdl_test.cpp
net/: CMakeLists.txt
net/source/hcl/: utils.h
net/source/hcl/export/: DotExport.cpp  DotExport.h
net/source/hcl/hlim/: BlockRamDetector.cpp  BlockRamDetector.h  Circuit.cpp  Circuit.h  Clock.cpp  Clock.h  ClockRational.h  ConnectionType.cpp  ConnectionType.h  Constraint.h  GraphExploration.cpp  GraphExploration.h  MemoryDetector.cpp  MemoryDetector.h  Node.cpp  Node.h  NodeCategorization.cpp  NodeCategorization.h  NodeGroup.cpp  NodeGroup.h  NodeIO.cpp  NodeIO.h  NodePort.h  NodePtr.h  NodeVisitor.cpp  NodeVisitor.h  SignalGroup.cpp  SignalGroup.h
net/source/hcl/simulation/: BitAllocator.cpp  BitAllocator.h  BitVectorState.cpp  BitVectorState.h  ConstructionTimeSimulationContext.cpp  ConstructionTimeSimulationContext.h  ReferenceSimulator.cpp  ReferenceSimulator.h  RunTimeSimulationContext.cpp  RunTimeSimulationContext.h  SigHandle.cpp  SigHandle.h  SimulationContext.cpp  SimulationContext.h  Simulator.cpp  Simulator.h  SimulatorCallbacks.cpp  SimulatorCallbacks.h  SimulatorControl.cpp  SimulatorControl.h  UnitTestSimulationFixture.cpp  UnitTestSimulationFixture.h  WaveformRecorder.cpp  WaveformRecorder.h
net/source/hcl/utils/: BitManipulation.cpp  BitManipulation.h  CppTools.h  Enumerate.h  Exceptions.cpp  Exceptions.h  LinkedList.h  Preprocessor.h  Range.h  StackTrace.cpp  StackTrace.h  Traits.h
stl/: CMakeLists.txt
stl/source/hcl/stl/: Adder.cpp  Adder.h  Avalon.cpp  Avalon.h  BlockRam.cpp  BlockRam.h  Counter.h  ExternalNodeHandlers.h  Stream.h  driver_utils.h
stl/unitTests/: CMakeLists.txt
stl/unitTests/source/: crypto.cpp  hdmi.cpp  io.cpp  kvs.cpp  main.cpp  tcamTest.cpp  utils.cpp
tests/frontend/: BVecTest.cpp  CDC.cpp  CMakeLists.txt  EventStatistics.cpp  RegTest.cpp  SIntTest.cpp  UIntTest.cpp  VCD.cpp  basics.cpp  bigInt.cpp  bitManip.cpp  compound.cpp  constructionTimeSimulation.cpp  defaults.cpp  enum.cpp  exportVHDL.cpp  externalModule.cpp  fsm.cpp  main.cpp  memory.cpp  partition.cpp  pch.cpp  pch.h  retiming.cpp  simulationProcess.cpp  utils.cpp
tests/scl/: CMakeLists.txt  MappingTests_IO.cpp  MappingTests_IO.h  MappingTests_Memory.cpp  MappingTests_Memory.h  axi_test.cpp  behavior_test.cpp  bitbang_test.cpp  cdc_test.cpp  crc_test.cpp  crypto.cpp  dma_test.cpp  fifo.cpp  fifo_test.cpp  hdmi.cpp  hierarchy_test.cpp  idAllocator_test.cpp  intelQuartusTests.cpp  io.cpp  kvs.cpp  main.cpp  math_test.cpp  memoryMap.cpp  or_tree_test.cpp  packet_test.cpp  pch.cpp  pch.h  pci_requester_tests.cpp  pci_test.cpp  pci_vendor_unlocking_tests.cpp  pcie_host_test.cpp  repeatBuffer_test.cpp  riscv_test.cpp  sdram_test.cpp  stream.cpp  stream_test.cpp  techMappingGeneric.cpp  techMappingIntel.cpp  techMappingXilinx.cpp  tilelink_test.cpp  (+3 more)
tests/tutorial/: CMakeLists.txt  main.cpp  pch.cpp  pch.h  tutorial_part1.cpp  tutorial_part2.cpp  tutorial_part3.cpp
vis/: CMakeLists.txt
vis/source/hcl/vis/: BaseGraphicsComposite.cpp  BaseGraphicsComposite.h  CHCLSyntaxHighlighter.cpp  CHCLSyntaxHighlighter.h  CircuitView.cpp  CircuitView.h  EdgeTree.cpp  EdgeTree.h  GraphLayouting.cpp  GraphLayouting.h  MainWindowSimulate.cpp  MainWindowSimulate.h  MainWindowSimulate.ui  Node.cpp  Node.h  Node_ElementaryOp.cpp  Node_ElementaryOp.h  Node_Entity.cpp  Node_Entity.h  Node_Signal.cpp  Node_Signal.h
(+1342 files in other folders)
